implement automatic dashboard refresh and remove debug UI

--- a/workouts-app/Frontend/index.html
+++ b/workouts-app/Frontend/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Workouts App</title>
+    <title>FitForge - Forge Your Fitness Journey</title>
+    <meta name="description" content="FitForge - Your comprehensive fitness platform with AI-powered workout generation, exercise library, and progress tracking. Forge your fitness journey today!" />
+    <meta name="keywords" content="fitness, workout, exercise, AI workout, fitness tracking, workout plans, exercise library, FitForge" />
   </head>
   <body>
     <div id="root"></div>
